--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@
 
 *{
     padding:0px;
+    
 }
 body {
+    background-image: url(https://wallpapercave.com/wp/cqhO8rQ.jpg);
     text-align: center;
     background-color: cornsilk;
     font-family: 'Bubblegum Sans', cursive;
